--- a/products-w3.html
+++ b/products-w3.html
@@ -101,6 +101,7 @@
         </div><!-- .col -->
       </div><!-- .row -->
     </div><!-- .container -->
+
     <!-- modal 新增 / 編輯 -->
     <div id="productModal" class="modal" tabindex="-1">
       <div class="modal-dialog modal-xl">
@@ -244,6 +245,12 @@
         </div><!-- .modal-content -->
       </div><!-- .modal-dialog -->
     </div><!-- .delProductModal -->
+
+    <!-- 轉圈圈 -->
+    <div id="loading" class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+
   </div><!-- .product -->
 
   <!-- 頁尾 -->
