--- a/products-w3.html
+++ b/products-w3.html
@@ -247,7 +247,7 @@
     </div><!-- .delProductModal -->
 
     <!-- 轉圈圈 -->
-    <div id="loading" class="spinner-border" role="status">
+    <div id="loading" class="spinner-border d-none" role="status">
       <span class="visually-hidden">Loading...</span>
     </div>
 
